WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133339
[Cocoa] Can't use bundle-defined classes for bundle parameters
https://bugs.webkit.org/show_bug.cgi?id=133339
Summary
[Cocoa] Can't use bundle-defined classes for bundle parameters
mitz
Reported
2014-05-27 22:11:05 PDT
[Cocoa] Can't use bundle-defined classes for bundle parameters
Attachments
Decode bundle parameter after loading the bundle
(8.28 KB, patch)
2014-05-27 22:19 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-05-27 22:19:24 PDT
Created
attachment 232170
[details]
Decode bundle parameter after loading the bundle
WebKit Commit Bot
Comment 2
2014-05-27 22:21:36 PDT
Attachment 232170
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/InjectedBundle/mac/InjectedBundleMac.mm:102: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/WebProcess/InjectedBundle/mac/InjectedBundleMac.mm:102: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2014-05-28 05:46:26 PDT
Comment on
attachment 232170
[details]
Decode bundle parameter after loading the bundle Very nice!
mitz
Comment 4
2014-05-28 07:29:35 PDT
Fixed in <
http://trac.webkit.org/r169422
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug